initial setup to MVVM architecture

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
-    <string name="app_name">PicPay</string>
-    <string name="title">Contatos</string>
-    <string name="error">Ocorreu um erro. Tente novamente.</string>
-
+    <string name="app_name" translatable="false">PicPay</string>
+    <string name="title">Contacts</string>
+    <string name="error">An error occurred. Please try again.</string>
 </resources>
