add support to different screens

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="title">Contactos</string>
     <string name="error">Ocurrio un error. Inténtalo de nuevo.</string>
+    <string name="failed_get_data">No se pudieron obtener los datos.</string>
 </resources>
