--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name" translatable="false">PicPay</string>
-    <string name="title">Contacts</string>
     <string name="error">An error occurred. Please try again.</string>
+    <string name="failed_get_data">Failed to get data.</string>
+    <string name="title">Contacts</string>
 </resources>
