fix internet connection message and add a retry button for trying connecting again to fetch data

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -3,4 +3,6 @@
     <string name="title">Contactos</string>
     <string name="error">Ocurrio un error. Inténtalo de nuevo.</string>
     <string name="failed_get_data">No se pudieron obtener los datos.</string>
+    <string name="no_internet">No hay conexión a Internet.</string>
+    <string name="retry">Inténtalo de nuevo</string>
 </resources>
