--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -3,4 +3,6 @@
     <string name="title">Contatos</string>
     <string name="error">Ocorreu um erro. Tente novamente.</string>
     <string name="failed_get_data">Erro ao obter dados.</string>
+    <string name="no_internet">Sem conexão com à internet.</string>
+    <string name="retry">Tentar novamente</string>
 </resources>
