--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="contacts_updated">Lista de contactos actualizada</string>
     <string name="title">Contactos</string>
     <string name="error">Ocurrio un error. Inténtalo de nuevo.</string>
     <string name="failed_get_data">No se pudieron obtener los datos.</string>
     <string name="no_internet">No hay conexión a Internet.</string>
     <string name="retry">Inténtalo de nuevo</string>
+    <string name="update_contacts">Actualizar contactos</string>
 </resources>
