--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
     <string name="app_name" translatable="false">PicPay</string>
+    <string name="contacts_updated">Contacts list updated</string>
     <string name="error">An error occurred. Please try again.</string>
     <string name="failed_get_data">Failed to get data.</string>
     <string name="no_internet">No internet connection.</string>
     <string name="retry">Try again</string>
     <string name="title">Contacts</string>
+    <string name="update_contacts">Update contacts</string>
 </resources>
